# futures-rs

futures/: Cargo.toml
futures-channel/: Cargo.toml
futures-channel/src/: oneshot.rs
futures-channel/src/mpsc/: mod.rs
futures-core/src/: lib.rs
futures-core/src/future/: either.rs  mod.rs  option.rs
futures-core/src/stream/: mod.rs
futures-core/src/task/: context.rs  mod.rs
futures-executor/: Cargo.toml
futures-test/: Cargo.toml
futures-util/: Cargo.toml
